--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -1,46 +1,46 @@
 name: Spellcheck
 
 on:
-    push:
-        branches: ['main']
-    pull_request:
+  push:
+    branches: ["main"]
+  pull_request:
 
 concurrency:
-    group: ${{ github.workflow }}-${{ github.ref_name }}
-    cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
 
 env:
-    CARGO_TERM_COLOR: always
+  CARGO_TERM_COLOR: always
 
 jobs:
-    spellcheck:
-        name: Spellcheck
+  spellcheck:
+    name: Spellcheck
 
-        runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Install `cargo-spellcheck`
-              uses: taiki-e/install-action@v2
-              with:
-                  tool: cargo-spellcheck
-            - name: Run Spellcheck
-              run: |
-                  cargo spellcheck check -m 1
-                  cargo spellcheck check -m 1 CHANGELOG.md
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install `cargo-spellcheck`
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-spellcheck
+      - name: Run Spellcheck
+        run: |
+          cargo spellcheck check -m 1
+          cargo spellcheck check -m 1 CHANGELOG.md
 
-    typos:
-        name: Typos
+  typos:
+    name: Typos
 
-        runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Install Typos
-              uses: taiki-e/install-action@v2
-              with:
-                  tool: typos-cli
-            - name: Run Typos
-              run: typos
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Typos
+        uses: taiki-e/install-action@v2
+        with:
+          tool: typos-cli
+      - name: Run Typos
+        run: typos
