--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,77 +1,77 @@
 name: Format
 
 on:
-    push:
-        branches: ['main']
-    pull_request:
+  push:
+    branches: ["main"]
+  pull_request:
 
 concurrency:
-    group: ${{ github.workflow }}-${{ github.ref_name }}
-    cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
 
 env:
-    CARGO_TERM_COLOR: always
+  CARGO_TERM_COLOR: always
 
 jobs:
-    rustfmt:
-        name: Rustfmt
+  rustfmt:
+    name: Rustfmt
 
-        runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Install Rust nightly
-              run: |
-                  rustup toolchain install nightly --profile minimal --component rustfmt --allow-downgrade
-                  rustup default nightly
-            - name: Run Rustfmt
-              run: cargo fmt --check
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Rust nightly
+        run: |
+          rustup toolchain install nightly --profile minimal --component rustfmt --allow-downgrade
+          rustup default nightly
+      - name: Run Rustfmt
+        run: cargo fmt --check
 
-    taplo:
-        name: Taplo
+  taplo:
+    name: Taplo
 
-        runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Install Taplo
-              uses: taiki-e/install-action@v2
-              with:
-                  tool: taplo-cli
-            - name: Run Taplo
-              run: taplo fmt --check
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Taplo
+        uses: taiki-e/install-action@v2
+        with:
+          tool: taplo-cli
+      - name: Run Taplo
+        run: taplo fmt --check
 
-    swc:
-        name: SWC
+  swc:
+    name: SWC
 
-        runs-on: ubuntu-latest
-        defaults:
-            run:
-                working-directory: ./src/thread/atomics/script
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src/thread/atomics/script
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Install SWC
-              run: sudo npm i -g @swc/cli
-            - name: Run SWC
-              run: |
-                  swc . --ignore "node_modules,**/*.d.ts" --only **/*.ts -d . --out-file-extension min.js
-            - name: Check for diff
-              run: |
-                  [[ -z $(git status -s) ]]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install SWC
+        run: sudo npm i -g @swc/cli
+      - name: Run SWC
+        run: |
+          swc . --ignore "node_modules,**/*.d.ts" --only **/*.ts -d . --out-file-extension min.js
+      - name: Check for diff
+        run: |
+          [[ -z $(git status -s) ]]
 
-    prettier:
-        name: Prettier
+  prettier:
+    name: Prettier
 
-        runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Install Prettier
-              run: sudo npm i -g prettier
-            - name: Run Prettier
-              run: prettier . --check
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Prettier
+        run: sudo npm i -g prettier
+      - name: Run Prettier
+        run: prettier . --check
