--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -58,7 +58,7 @@ jobs:
         run: sudo npm i -g @swc/cli
       - name: Run SWC
         run: |
-          swc . --ignore "node_modules,**/*.d.ts" --only **/*.ts -d . --out-file-extension min.js
+          swc . --ignore node_modules,**/*.d.ts --only **/*.ts -d . --out-file-extension min.js
       - name: Check for diff
         run: |
           [[ -z $(git status -s) ]]
