Fix NPM dependabot

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -15,8 +15,8 @@ updates:
         patterns:
           - "*"
 
-  - package-ecosystem: github-actions
-    directory: /
+  - package-ecosystem: npm
+    directory: src/thread/atomics/script
     schedule:
       interval: daily
     groups:
