Fix LLVM IR adjustments

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -70,10 +70,13 @@ jobs:
             fi
 
             input=coverage-input/$(basename $file)
-
             cp $file $input
+
             perl -i -p0e 's/(^define.*?$).*?^}/$1\nstart:\n  unreachable\n}/gms' $input
-            perl -i -p0e 's/(^define( [^ ]+)*) range\(.*?\)/$1/gm' $input
+            counter=1
+            while (( counter != 0 )); do
+                counter=$(perl -i -p0e '$c+= s/(^(define|declare)(,? [^\n ]+)*),? range\(.*?\)/$1/gm; END{print "$c"}' $input)
+            done
 
             clang-18 $input -Wno-override-module -c -o coverage-output/$(basename $input .ll).o
           done
