Test coverage improvements
- Drop usage of `06393993/lcov-reporter-action` and replace it with a custom conversion of `llvm-cov`s HTML output into markdown.
- Merge all `*.profraw`s at once instead of in each run, trading off increased artifact size for shorter run times.
- Replace usage of `cache-cargo-install-action` with `install-action`.
- Remove unnecessary Rust demangling, which doesn't show in the current test coverage anyway.
- Tighten file path globs.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -200,7 +200,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install `wasm-bindgen-cli`
-        uses: taiki-e/cache-cargo-install-action@v2
+        uses: taiki-e/install-action@v2
         with:
           tool: wasm-bindgen-cli
       - name: Install Rust
