--- a/.github/workflows/coverage-documentation.yaml
+++ b/.github/workflows/coverage-documentation.yaml
@@ -15,9 +15,24 @@ env:
 
 jobs:
   coverage:
-    name: Test Coverage
+    name: Test Coverage ${{ matrix.mt.description }}
 
     runs-on: ubuntu-24.04
+
+    timeout-minutes: 10
+
+    strategy:
+      matrix:
+        mt:
+          - { id: 0 }
+          - {
+              id: 1,
+              description: with Atomics,
+              component: --component rust-src,
+              cflags: -matomics -mbulk-memory,
+              flags: "-Ctarget-feature=+atomics,+bulk-memory",
+              args: "-Zbuild-std=panic_abort,std",
+            }
 
     steps:
       - name: Checkout
@@ -30,35 +45,35 @@ jobs:
         run: sudo apt-get install clang-18
       - name: Install Rust nightly
         run: |
-          rustup toolchain install nightly --profile minimal --target wasm32-unknown-unknown --component rust-src
+          rustup toolchain install nightly --profile minimal --target wasm32-unknown-unknown ${{ matrix.mt.component }}
           rustup default nightly
       - name: Test
         env:
           CHROMEDRIVER: chromedriver
-          CFLAGS_wasm32_unknown_unknown: -matomics -mbulk-memory
+          CFLAGS_wasm32_unknown_unknown: ${{ matrix.mt.cflags }}
           CARGO_HOST_RUSTFLAGS: --cfg=wasm_bindgen_unstable_test_coverage
           RUSTFLAGS:
             -Cinstrument-coverage -Zcoverage-options=condition -Zno-profiler-runtime --emit=llvm-ir
             --cfg=wasm_bindgen_unstable_test_coverage --cfg=web_sys_unstable_apis
-            --cfg=unsupported_spawn_then_block -Ctarget-feature=+atomics,+bulk-memory
+            --cfg=unsupported_spawn_then_block ${{ matrix.mt.flags }}
           WASM_BINDGEN_UNSTABLE_TEST_PROFRAW_OUT: coverage-output
         run: |
           mkdir coverage-output
-          cargo test --all-features --target wasm32-unknown-unknown -Ztarget-applies-to-host -Zhost-config -Zbuild-std=panic_abort,std --tests -- --skip corrupt
+          cargo test --all-features --target wasm32-unknown-unknown -Ztarget-applies-to-host -Zhost-config ${{ matrix.mt.args }} --tests -- --skip corrupt
       - name: Prepare Object Files
         env:
-          CFLAGS_wasm32_unknown_unknown: -matomics -mbulk-memory
+          CFLAGS_wasm32_unknown_unknown: ${{ matrix.mt.cflags }}
           CARGO_HOST_RUSTFLAGS: --cfg=wasm_bindgen_unstable_test_coverage
           RUSTFLAGS:
             -Cinstrument-coverage -Zcoverage-options=condition -Zno-profiler-runtime --emit=llvm-ir
             --cfg=wasm_bindgen_unstable_test_coverage --cfg=web_sys_unstable_apis
-            --cfg=unsupported_spawn_then_block -Ctarget-feature=+atomics,+bulk-memory
+            --cfg=unsupported_spawn_then_block ${{ matrix.mt.flags }}
         run: |
           mkdir coverage-input
           crate_name=web_thread
           IFS=$'\n'
           for file in $(
-            cargo test --all-features --target wasm32-unknown-unknown -Ztarget-applies-to-host -Zhost-config -Zbuild-std=panic_abort,std --tests --no-run --message-format=json | \
+            cargo test --all-features --target wasm32-unknown-unknown -Ztarget-applies-to-host -Zhost-config ${{ matrix.mt.args }} --tests --no-run --message-format=json | \
             jq -r "select(.reason == \"compiler-artifact\") | (select(.target.kind == [\"test\"]) // select(.target.name == \"$crate_name\")) | .filenames[0]"
           )
           do
@@ -83,7 +98,7 @@ jobs:
       - name: Upload Test Coverage Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: test-coverage-0
+          name: test-coverage-${{ matrix.mt.id }}
           path: coverage-output
           retention-days: 1
           if-no-files-found: error
